Implemented interacting with the cards directly (no need to push the big button)

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -7,6 +7,7 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".MainActivity"
     tools:showIn="@layout/activity_main">
+    <!--android:onClick="onTouch"-->
 
     <TextView
         android:id="@+id/cardSlot01"
