Added Auto-Update Results setting (can enable or disable auto-updating after changing certain settings)

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -85,6 +85,11 @@
                 android:title="10" />
         </menu>
     </item>
+    <item
+        android:id="@+id/action_autoUpdateResults"
+        android:title="@string/action_autoUpdateResults"
+        android:checkable="true"
+        app:showAsAction="never" />
     <group android:id="@+id/group_displayCategories" >
         <item
             android:id="@+id/action_displayAll"
