--- a/app/src/main/res/xml/game_elements.xml
+++ b/app/src/main/res/xml/game_elements.xml
@@ -1009,7 +1009,7 @@
             <name>Growing up</name>
             <firstHalf type="verb">Growing</firstHalf>
             <secondHalf the="false">
-                <singular>growing</singular>
+                <singular>growth</singular>
             </secondHalf>
         </element>
         <element>
