--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -19,7 +19,7 @@
         android:paddingLeft="0dp"
         android:paddingEnd="12dp"
         android:paddingRight="12dp"
-        android:text="@string/cardSlot"
+        android:text=""
         android:textColor="@color/colorGray"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -40,7 +40,7 @@
         android:paddingLeft="0dp"
         android:paddingEnd="12dp"
         android:paddingRight="12dp"
-        android:text="@string/cardSlot"
+        android:text=""
         android:textColor="@color/colorGray"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -61,7 +61,7 @@
         android:paddingLeft="0dp"
         android:paddingEnd="12dp"
         android:paddingRight="12dp"
-        android:text="@string/cardSlot"
+        android:text=""
         android:textColor="@color/colorGray"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -82,7 +82,7 @@
         android:paddingLeft="0dp"
         android:paddingEnd="12dp"
         android:paddingRight="12dp"
-        android:text="@string/cardSlot"
+        android:text=""
         android:textColor="@color/colorGray"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -103,7 +103,7 @@
         android:paddingLeft="0dp"
         android:paddingEnd="12dp"
         android:paddingRight="12dp"
-        android:text="@string/cardSlot"
+        android:text=""
         android:textColor="@color/colorGray"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -124,7 +124,7 @@
         android:paddingLeft="0dp"
         android:paddingEnd="12dp"
         android:paddingRight="12dp"
-        android:text="@string/cardSlot"
+        android:text=""
         android:textColor="@color/colorGray"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -145,7 +145,7 @@
         android:paddingLeft="0dp"
         android:paddingEnd="12dp"
         android:paddingRight="12dp"
-        android:text="@string/cardSlot"
+        android:text=""
         android:textColor="@color/colorGray"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -166,7 +166,7 @@
         android:paddingLeft="0dp"
         android:paddingEnd="12dp"
         android:paddingRight="12dp"
-        android:text="@string/cardSlot"
+        android:text=""
         android:textColor="@color/colorGray"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -187,7 +187,7 @@
         android:paddingLeft="0dp"
         android:paddingEnd="12dp"
         android:paddingRight="12dp"
-        android:text="@string/cardSlot"
+        android:text=""
         android:textColor="@color/colorGray"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -208,7 +208,7 @@
         android:paddingLeft="0dp"
         android:paddingEnd="12dp"
         android:paddingRight="12dp"
-        android:text="@string/cardSlot"
+        android:text=""
         android:textColor="@color/colorGray"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
