--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
         <TextView
-            android:id="@+id/pageNum"
+            android:id="@+id/headerInfo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
