--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -93,9 +93,19 @@
         android:id="@+id/action_clearAllLocks"
         android:title="@string/action_clearAllLocks"
         app:showAsAction="never" />
+<!--    <item-->
+<!--        android:id="@+id/action_keepResultCategoriesToggle"-->
+<!--        android:title="@string/action_keepResultCategories"-->
+<!--        android:checkable="true"-->
+<!--        app:showAsAction="never" />-->
     <item
-        android:id="@+id/action_autoUpdateResults"
+        android:id="@+id/action_autoUpdateResultsToggle"
         android:title="@string/action_autoUpdateResults"
+        android:checkable="true"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_showCategoriesToggle"
+        android:title="@string/action_showCategories"
         android:checkable="true"
         app:showAsAction="never" />
     <group android:id="@+id/group_displayCategories" >
