--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,9 +3,11 @@
     <color name="colorPrimary">#557AE3</color>
     <color name="colorPrimaryDark">#3C57A2</color>
     <color name="colorAccent">#C89DE3</color>
+<!--    <color name="colorLockText">#585858</color>-->
+    <color name="colorLockBackground">#CCDDFF</color>
+    <color name="colorWhite">#FFFFFF</color>
     <color name="colorCyan">#4CBAA8</color>
     <color name="colorGreen">#53D384</color>
-    <color name="colorYellow">#BD9F35</color>
     <color name="colorBlueLight">#449EAF</color>
     <color name="colorGray">#585858</color>
     <color name="colorBlue">#5391D3</color>
